@@ -1,3 +1,9 @@
+Fri Jan 15 10:27:30 UTC 2010  Olli Savia  <ops@iki.fi>
+
+        * ace/config-lynxos.h:
+          Define __NO_INCLUDE_WARN__ before including param.h.
+          Fixes compile warnings.
+
 Fri Jan 15 10:22:06 UTC 2010  Olli Savia  <ops@iki.fi>
 
         * ace/Registry.cpp:
